--- a/filepicker.css
+++ b/filepicker.css
@@ -6,6 +6,7 @@
   right: 20%;
   top: 0%;
   background: white;
+  z-index: 1;
   -webkit-transform: translate3d(0,-100%,0);
   -moz-transform: translate3d(0,-100%,0);
   -ms-transform: translate3d(0,-100%,0);
